# streamsets-databricks-migration-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamsets_stages.md
agent/: base_client.py  claude_client.py  client_factory.py  context_builder.py  gateway_client.py  migration_agent.py
agent/prompts/: system_prompt.md
agent/tools/: classify_pipeline.py  emit_migration_result.py  lookup_stage_mapping.py
catalog/: stage_catalog.py
catalog/stages/: destinations.yaml  executors.yaml  origins.yaml  processors.yaml
cli/: main.py
cli/commands/: export.py  ingest.py  migrate.py  serve.py  status.py
config/: settings.py
data/pipelines/team_alpha/: kafka_to_delta.json  multi_kafka_enrichment.json
models/: databricks.py  migration.py  stage_mapping.py  streamsets.py
parser/: pipeline_classifier.py  pipeline_parser.py
review/: app.py
review/routers/: pipelines.py  teams.py
review/templates/: base.html  dashboard.html  diff_view.html  pipeline_list.html  pipeline_review.html
state/: progress_tracker.py  state_manager.py
tests/: conftest.py
tests/integration/: test_full_cycle.py
tests/unit/: test_client_factory.py  test_context_builder.py  test_export_cli.py  test_gateway_client.py  test_parser.py  test_stage_catalog.py  test_state_manager.py  test_tools.py
